assets/css/styles.css
:root {
    --primary-font: "Zalando Sans Expanded", sans-serif;
}

.bebas-neue-regular {
    font-family: "Bebas Neue", sans-serif;
    font-weight: 400;
    font-style: bold;
}

.zalando-sans-expanded-normal {
    font-family: "Zalando Sans Expanded", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}
.zalando-sans-expanded-impact {
    font-family: "Zalando Sans Expanded", sans-serif;
    font-optical-sizing: auto;
    font-weight: 600;
    font-style: semibold;
}

body {
    font-family: var(--primary-font);
    max-width: 100vw;
}

section {
    height: max-content;
}

/*overrides to bootstrap row default margin for better control over layout*/
.row {
    margin-top: 0 !important;
}
/*not important so that individual columns can override if needed*/
.row > * {
    margin-top: 0;
}

.content-container {
    height: auto;
    padding-right: calc(1.5rem * 0.5);
    padding-left: calc(1.5rem * 0.5);
}

/* grid visualisation CSS for testing */

/* grid visualisation CSS for testing 
.container,
.row {
    border: 2px solid black;
}

.col-12 {
    border: 2px solid white;
    background-color: lightgray;
}
*/

/* Styling for each info section*/
.infoblock {
    min-width: 0;
    left: 0;
    margin-bottom: 0rem;
    min-height: max-content;
    align-items: center !important /* Override Bootstrap align-items for rows */;
}

#hero {
    position: relative;
    height: 85vh;
    background: url("../image/testhero.webp") no-repeat center center;
    background-size: cover;
}

#hero-content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    color: white;
    text-decoration: uppercase;
    width: 100%;
    z-index: 2;
}

/*add default bs padding to row container*/
#concern_section {
    padding-left: 15px;
    padding-right: 15px;
}

#concern-banner {
    border-bottom: 2px solid black;
    padding-top: 0;
}
/* Media queries */

/* Small screens and up */

@media screen and (min-width: 576px) {
}

/* Medium devices (tablets, 768px and up) */
@media screen and (min-width: 768px) {
}

/* Large devices (small laptops, 992px and up) */
@media screen and (min-width: 992px) {
    #concern-banner {
        text-align: left !important;
    }
}

/* xl devices (large desktops, 1200px and up) */
@media screen and (min-width: 1200px) {
}

/* xxl devices (larger desktops, 1400px and up) */
@media screen and (min-width: 1400px) {
}

